# Code-Sync-CLI

./: Cargo.toml  README.md
src/: main.rs
