[package]
name = "devassist-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.2"
tokio = { version = "1", features = ["full"] }
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "2.8.1"
sha2 = "0.10.8"
log = "0.4.21"
env_logger = "0.11.3"
futures = "0.3.30"
chrono = "0.4.35"
clap = "3.0"

